CSS offset-path: Transitions between incompatible rays flip

We previously experienced
FAIL CSS Transitions with transition: all: property <offset-path>
from [ray(200deg farthest-side contain)]
to [ray(300deg sides)] at (0.3) is [none]

offset-path can animate as a ray <angle> or as a path string,
and unfortunately empty path string interpolation was being used.

BUG=797836

Change-Id: Ia54bf4aa2e208f3994c4cea1789111840571eeac
Reviewed-on: https://chromium-review.googlesource.com/845460
Reviewed-by: Darren Shen <shend@chromium.org>
Commit-Queue: Eric Willigers <ericwilligers@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526283}
Former-commit-id: 365506ebbab6ecde1e9c5c7baa8894186123479a